[gd_scene load_steps=10 format=3 uid="uid://dbr1d3ag3is1e"]

[ext_resource type="Texture2D" uid="uid://dcifdlgr6dggr" path="res://assets/sprite/entity/player/player.png" id="1_3up65"]
[ext_resource type="Script" uid="uid://b4bvbt88nibg7" path="res://script/entity/player/player_controller.gd" id="1_5nvlc"]
[ext_resource type="Script" uid="uid://bd1oxv0hkmcqm" path="res://script/entity/entity_data.gd" id="2_hcyir"]
[ext_resource type="PackedScene" uid="uid://dc3f34qfqtswh" path="res://prefabs/animation node/injured_effect.tscn" id="4_23v66"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_i8ryp"]
radius = 24.0
height = 96.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_u6xtk"]
radius = 24.0
height = 96.0

[sub_resource type="Animation" id="Animation_hcyir"]
resource_name = "injured"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0333333, 0.1),
"transitions": PackedFloat32Array(0.196146, 28.84, 1),
"update": 0,
"values": [Color(0.234074, 0.846801, 0.347261, 1), Color(0.569206, 0, 0.0720483, 1), Color(0.234074, 0.846801, 0.347261, 1)]
}

[sub_resource type="Animation" id="Animation_23v66"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.234074, 0.846801, 0.347261, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_pvveg"]
_data = {
&"RESET": SubResource("Animation_23v66"),
&"injured": SubResource("Animation_hcyir")
}

[node name="Player" type="RigidBody2D"]
modulate = Color(0.234074, 0.846801, 0.347261, 1)
collision_layer = 2
can_sleep = false
lock_rotation = true
script = ExtResource("1_5nvlc")

[node name="EntityData" type="Node" parent="."]
script = ExtResource("2_hcyir")
knockback_velocity = Vector2(400, -300)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -64)
shape = SubResource("CapsuleShape2D_i8ryp")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -64)
scale = Vector2(0.64, 0.64)
texture = ExtResource("1_3up65")

[node name="Entity Area" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 20

[node name="CollisionShape2D" type="CollisionShape2D" parent="Entity Area"]
position = Vector2(0, -64)
shape = SubResource("CapsuleShape2D_u6xtk")

[node name="Invincible Timer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_pvveg")
}

[node name="Injured Effect" parent="." instance=ExtResource("4_23v66")]

[connection signal="on_damaged" from="EntityData" to="." method="on_damaged"]
[connection signal="on_death" from="EntityData" to="." method="on_death"]
[connection signal="area_entered" from="Entity Area" to="." method="on_area_entered"]
